push data to room page, modify step 2

--- a/src/main/resources/templates/task/create/step2.html
+++ b/src/main/resources/templates/task/create/step2.html
@@ -194,56 +194,61 @@
                                 <option value="0" selected th:text="#{task-create.step2.sorted-by-recommended}"></option>
                                 <option value="1" th:text="#{task-create.step2.sorted-by-price-lowest-to-highest}"></option>
                                 <option value="2" th:text="#{task-create.step2.sorted-by-price-highest-to-lowest}"></option>
-                                <option value="3" th:text="#{task-create.step2.sorted-by-recommended}"></option>
                             </select>
                         </div>
                     </div>
-                    <div class="recommendations__result panel panel--spaced ">
-                        <div class="recommendations__result-figure">
-                            <div>
-                                <img class="recommendations__avatar__circular"
-                                     th:src="@{~/images/person_3.jpg}"
-                                     alt="Tasker">
-                            </div>
-                            <div class="recommendations__result-actions view-pc">
-                                <a class="recommendations__review-link d-block"
-                                   tabindex="0" role="button">
-                                    <span th:text="#{task-create.step2.view-profile-reviews}"></span>
-                                </a>
-                                <form th:action="@{/task/create/step2}" method="post">
-                                     <!--Temporary set tasker ID = 1 -->
-                                    <!--<input type="text" th:value="*{description}">-->
-                                    <input type="hidden" id="tasker" name="tasker" th:value="1">
-                                    <button type="submit" class="recommendations__hire-btn btn btn-primary btn-block">
-                                        <span th:text="#{task-create.step2.select-continue-btn}"></span>
-                                    </button>
-                                </form>
+                    <th:block th:each="tasker: ${taskers}">
+                        <div class="recommendations__result panel panel--spaced ">
+                            <div class="recommendations__result-figure">
+                                <div>
+                                    <!--<img class="recommendations__avatar__circular"-->
+                                         <!--th:src="@{~/images/person_3.jpg}"-->
+                                         <!--alt="Tasker">-->
+                                    <img class="recommendations__avatar__circular"
+                                         th:src="${tasker.user.user.imageUrl}"
+                                         alt="Tasker">
+                                </div>
+                                <div class="recommendations__result-actions view-pc">
+                                    <a class="recommendations__review-link d-block"
+                                       tabindex="0" role="button">
+                                        <span th:text="#{task-create.step2.view-profile-reviews}"></span>
+                                    </a>
+                                    <form th:action="@{/task/create/step2}" method="post">
+                                        <!--Temporary set tasker ID = 1 -->
+                                        <!--<input type="text" th:value="*{description}">-->
+                                        <input type="hidden" id="tasker" name="tasker" th:value="${tasker.id}">
+                                        <button type="submit" class="recommendations__hire-btn btn btn-primary btn-block">
+                                            <span th:text="#{task-create.step2.select-continue-btn}"></span>
+                                        </button>
+                                    </form>
 
-                                <div class="u-hidden--sm">
+                                    <div class="u-hidden--sm">
                                     <span class="whisper">
                                         <span th:text="#{task-create.step2.notification-3}"></span>
                                     </span>
+                                    </div>
                                 </div>
                             </div>
-                        </div>
-                        <div class="recommendations__result-content">
-                            <div class="recommendations__result-name" tabindex="0" role="button">Trần Hiểu Đông</div>
-                            <span>
+                            <div class="recommendations__result-content">
+                                <div class="recommendations__result-name" tabindex="0" role="button">
+                                    <span th:text="${tasker.user.user.firstName  + ' ' + tasker.user.user.lastName}">Trần Hiểu Đông</span>
+                                </div>
+                                <span>
                                 <div class="recommendations__result-price-container priceChange-appear-active">
                                     <div class="recommendations__result-price recommendations__pill">
-                                        <strong>80.000 vnđ<span>/h</span></strong>
+                                        <strong><span th:text="${#numbers.formatDecimal(taskInfo.taskCategory.minPrice, 0, 'COMMA', 0, 'POINT')}">80.000</span> vnđ<span>/h</span></strong>
                                     </div>
                                 </div>
                             </span>
-                            <ul class="recommendations__badge-list">
-                                <li class="recommendations__pill--elite">
-                                    <i class="icon-sentiment_very_satisfied"></i><span th:text="#{task-create.step2.elite-tasker}">Nhân viên ưu tú</span>
-                                </li>
-                            </ul>
-                            <ul class="recommendations__result-info">
-                                <li><i class="icon-check-circle-o"></i><span>66 Công việc nhà</span></li>
-                                <li><i class="icon-star-o"></i>
-                                    <span style="margin-left: -5px;">
+                                <ul class="recommendations__badge-list">
+                                    <li class="recommendations__pill--elite">
+                                        <i class="icon-sentiment_very_satisfied"></i><span th:text="#{task-create.step2.elite-tasker}">Nhân viên ưu tú</span>
+                                    </li>
+                                </ul>
+                                <ul class="recommendations__result-info">
+                                    <li><i class="icon-check-circle-o"></i><span>66 Công việc nhà</span></li>
+                                    <li><i class="icon-star-o"></i>
+                                        <span style="margin-left: -5px;">
                                         100% Nhận xét tích cực
                                         <span class="tooltip-tether">
                                             <i class="icon-info_outline recommendations__badge-info"></i>
@@ -256,41 +261,40 @@
                                         </span>
                                     </span>
 
-                                </li>
-                                <li><i class="icon-beenhere"></i><span style="margin-left: -3px;">100% Tin cậy</span> <i
-                                    class="icon-info_outline"></i></li>
-                            </ul>
-                            <div class="recommendations__blurb-title"><span th:text="#{task-create.step2.how-i-can-help}"></span></div>
-                            <div class="recommendations__blurb">
-                                Đếm rất khéo léo và hiệu quả với các công cụ phù hợp để hoàn thành công việc, mọi cài
-                                đặt AC của các đơn vị AC có cùng giá mỗi giờ cho mỗi đơn vị (ví dụ: một đơn vị AC một
-                                giờ hai đơn vị AC hai giờ, v.v. Tối thiểu là 2 giờ cho sửa chữa nhà khác
-                            </div>
-                            <div class="recommendations__review media--object">
-                                <div class="media--figure">
-                                    <img class="avatar-new-72" th:src="@{~/images/person_1.jpg}"
-                                         alt="Reviewer">
+                                    </li>
+                                    <li><i class="icon-beenhere"></i><span style="margin-left: -3px;">100% Tin cậy</span> <i
+                                        class="icon-info_outline"></i></li>
+                                </ul>
+                                <div class="recommendations__blurb-title"><span th:text="#{task-create.step2.how-i-can-help}"></span></div>
+                                <div class="recommendations__blurb">
+                                    <span th:text="${tasker.description}"></span>
                                 </div>
-                                <div class="media--content">
-                                    <div class="recommendations__review-content">"Công việc tuyệt vời. Đúng giờ, thân
-                                        thiện, nhanh chóng và lành nghề."
+                                <div class="recommendations__review media--object">
+                                    <div class="media--figure">
+                                        <img class="avatar-new-72" th:src="@{~/images/person_1.jpg}"
+                                             alt="Reviewer">
                                     </div>
-                                    <div class="u-muted">Xuân Thứ - 7/11/2019</div>
+                                    <div class="media--content">
+                                        <div class="recommendations__review-content">"Công việc tuyệt vời. Đúng giờ, thân
+                                            thiện, nhanh chóng và lành nghề."
+                                        </div>
+                                        <div class="u-muted">Xuân Thứ - 7/11/2019</div>
+                                    </div>
                                 </div>
-                            </div>
-                            <div class="recommendations__result-actions view-mobile">
-                                <a class="recommendations__hire-btn btn btn-primary btn-block "
-                                   th:href="@{/task/create/step3}">
-                                    <span th:text="#{task-create.step2.select-continue-btn}"></span>
-                                </a>
-                                <div class="u-hidden--sm">
+                                <div class="recommendations__result-actions view-mobile">
+                                    <a class="recommendations__hire-btn btn btn-primary btn-block "
+                                       th:href="@{/task/create/step3}">
+                                        <span th:text="#{task-create.step2.select-continue-btn}"></span>
+                                    </a>
+                                    <div class="u-hidden--sm">
                                     <span class="whisper">
                                         <span th:text="#{task-create.step2.notification-3}"></span>
                                     </span>
+                                    </div>
                                 </div>
                             </div>
                         </div>
-                    </div>
+                    </th:block>
                 </div>
             </div>
         </div>
