--- a/src/main/resources/templates/task/create/step1.html
+++ b/src/main/resources/templates/task/create/step1.html
@@ -211,7 +211,7 @@
                                     class="text-danger error-msg d-none"></span></div>
                                 <div class="box-input">
                                     <div class="form-group">
-                                        <input type="number" th:field="*{estimatedTime}"  class="form-control w-25" id="estimated-time">
+                                        <input type="number" step="0.1" th:field="*{estimatedTime}"  class="form-control w-25">
                                     </div>
                                     <div class="mt-lg-5 form-group text-center">
                                         <button class="btn btn-success btn-continue px-4" data-type="estimated-time"
